# calliope

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  language_spec.md  song.mid  test.cal  test.md
cmake/: FetchFallbackSf2.cmake  FetchSoundfonts.cmake
docs/: README.md  axioms.md  builtins.md  functional-primer.md  stdlib.md  syntax.md  types.md
examples/: arithmetic.cal  arpeggio-and-chord.cal  comparing-music.cal  constraints.cal  custom-instrument.cal  development.cal  dynamics.cal  factorial.cal  gcd.cal  instruments.cal  list-math.cal  not-operator.cal  pipeline.cal  reverse-notes.cal  tempo-and-velocity.cal  transforms.cal
examples/music/: articulation.cal  custom-instrument.cal  development.cal  hello.cal  key.cal  meter.cal  pipeline.cal  transforms.cal
examples/programming/: functional-basics.cal  list-math.cal  recursion.cal
scripts/: transcribe-all.sh
src/compiler/: calliope.cpp  calliopei.cpp  compiler.cpp  helper.cpp  helper.hpp  interactive.cpp  visualizer.cpp
src/compiler/backend/: audio.cpp  audio.hpp  midi.cpp  midi.hpp  miniaudio_impl.cpp  score.cpp  score.hpp  transcribe.cpp  transcribe.hpp  tsf_impl.cpp  visualize.hpp
src/compiler/core/: ast.cpp  ast.hpp  driver.cpp  driver.hpp  eval.cpp  eval.hpp  instrument.cpp  instrument.hpp  lexer.cpp  lexer.hpp  music.cpp  music.hpp  parser.cpp  parser.hpp  pitch.cpp  pitch.hpp  rational.cpp  rational.hpp  token.hpp  typecheck.cpp  typecheck.hpp
standard_library/: prelude.cal
tests/: test.cpp  test.hpp  test_driver.cpp  test_eval.cpp  test_lexer.cpp  test_main.cpp  test_midi.cpp  test_music.cpp  test_parser.cpp  test_pitch.cpp  test_rational.cpp  test_score.cpp  test_stdlib.cpp  test_typecheck.cpp
